# pycacheR

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  cache_file.py  guix.scm  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
cachepy/: __init__.py  cache_file.py
conda-recipe/: meta.yaml
docs/: api.md  features.md  getting-started.md  index.md
docs/tutorials/: graph.md  pytorch.md  scrnaseq.md  showcase.md
features/: index.html
getting-started/: index.html
notebooks/: 01_cachepy_showcase.ipynb  02_scrnaseq_cachepy.ipynb  03_pytorch_cachepy.ipynb
search/: search_index.json
tests/: conftest.py  test_core.py  test_files.py  test_graph.py  test_packages.py  test_sentinel.py
tutorials/graph/: index.html
tutorials/pytorch/: index.html
tutorials/scrnaseq/: index.html
tutorials/showcase/: index.html
