[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cachepy"
version = "1.0.0"
description = "Disk-backed memoization decorator with automatic dependency tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/BIMSBbioinfo/cachepy"
Documentation = "https://BIMSBbioinfo.github.io/cachepy/"

[tool.setuptools.packages.find]
include = ["cachepy*"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
